finalização do meu site

--- a/lolja.html
+++ b/lolja.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laços de Amor - Os melhores laços de Salvador</title>
     <!-- Link do CSS -->
-    <link rel="stylesheet" href="CSS/style.css"> 
+    <link rel="stylesheet" href="./css/style.css"> 
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
@@ -17,7 +17,7 @@
     <div class="nav container">
         <!-- Logo -->
         <a href="index.html" class="nav-logo">
-          <img src="img/amor2.png" alt="Logo da Loja" class="logotipo">
+          <img src="./img/amor2.png" alt="Logo da Loja" class="logotipo">
       </a>
         <!-- Links de navegação -->
         <div class="nav-links">
