--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalhe Conosco - Laços de Amor</title>
     <!-- Adicione link CSS -->
-    <link rel="stylesheet" href="CSS/falei.css"> 
+    <link rel="stylesheet" href="./css/falei.css"> 
 </head>
 <body>
     <!-- Cabeçalho -->
