finalizei meu projeto

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <!-- Links de navegação -->
                 <div class="nav-links">
                     <!-- Adicionar links para outras páginas, como "Fale Conosco", "Trabalhe Conosco", etc. -->
+                   <a href="loja.html" class="nav-link">Loja</a>
                     <a href="fale-conosco.html" class="nav-link">Fale Conosco</a>
                     <a href="trabalhe-conosco.html" class="nav-link">Trabalhe Conosco</a>
                     <a href="sobre-a-aluna.html" class="nav-link">Sobre a Aluna</a>
