--- a/loja.html
+++ b/loja.html
@@ -11,27 +11,28 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-   <!-- Header -->
-   <header>
-    <!-- Nav -->
-    <div class="nav container">
-        <!-- Logo -->
-        <a href="index.html" class="nav-logo">
-          <img src="./img/amor2.png" alt="Logo da Loja" class="logotipo">
-      </a>
-        <!-- Links de navegação -->
-        <div class="nav-links">
-          <a href="lolja.html" class="nav-link">Compre Nossos Produtos</a>
-          <a href="fale-conosco.html" class="nav-link">Fale Conosco</a>
-          <a href="trabalhe-conosco.html" class="nav-link">Trabalhe Conosco</a>
-          <a href="sobre-a-aluna.html" class="nav-link">Sobre a Aluna</a>
-          <a href="cliente.html" class="nav-link">Cliente</a>
-        </div>
-        <!-- Ícone do Carrinho -->
-        <div class="cart-icon">
-            <i class='bx bx-cart' id="cart-icon"></i>
-        </div>
-    </div>
+    <!-- Cabeçalho -->
+    <header>
+      <div class="container">
+          <!-- Nav -->
+          <div class="nav">
+              <!-- Logo com um link para a página inicial -->
+              <a href="index.html" class="nav-logo">
+                  <img src="img/amor2.png" alt="Logo da Loja" class="logotipo">
+              </a>
+              <!-- Links de navegação -->
+              <div class="nav-links">
+                  <!-- Adicionar links para outras páginas, como "Fale Conosco", "Trabalhe Conosco", etc. -->
+                 <a href="loja.html" class="nav-link">Loja</a>
+                  <a href="fale-conosco.html" class="nav-link">Fale Conosco</a>
+                  <a href="trabalhe-conosco.html" class="nav-link">Trabalhe Conosco</a>
+                  <a href="sobre-a-aluna.html" class="nav-link">Sobre a Aluna</a>
+                  <a href="cliente.html" class="nav-link">Cliente</a>
+              </div>
+          </div>
+      </div>
+  </header>
+
     <!-- Carrinho -->
     <div class="cart">
         <h2 class="cart-title">Seu Carrinho</h2>
