--- a/sobre-a-aluna.html
+++ b/sobre-a-aluna.html
@@ -10,19 +10,18 @@
 </head>
 <body>
     <!-- Cabeçalho -->
-    <header>
-        <div class="container">
-            <!-- Caixa branca envolta do nav -->
-            <div class="nav-container">
+        <header>
+            <div class="container">
                 <!-- Nav -->
                 <div class="nav">
                     <!-- Logo com um link para a página inicial -->
                     <a href="index.html" class="nav-logo">
-                        <img src="img/amor2.png" alt="" class="logotipo">
+                        <img src="img/amor2.png" alt="Logo da Loja" class="logotipo">
                     </a>
                     <!-- Links de navegação -->
                     <div class="nav-links">
-                        <a href="lolja.html" class="nav-link">Compre Nossos Produtos</a>
+                        <!-- Adicionar links para outras páginas, como "Fale Conosco", "Trabalhe Conosco", etc. -->
+                       <a href="loja.html" class="nav-link">Loja</a>
                         <a href="fale-conosco.html" class="nav-link">Fale Conosco</a>
                         <a href="trabalhe-conosco.html" class="nav-link">Trabalhe Conosco</a>
                         <a href="sobre-a-aluna.html" class="nav-link">Sobre a Aluna</a>
@@ -30,8 +29,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
 
     <!-- Conteúdo da página da Aluna -->
     <section class="student">
