--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -12,22 +12,20 @@
     <!-- Cabeçalho -->
     <header>
         <div class="container">
-            <!-- Caixa branca envolvendo o nav -->
-            <div class="nav-container">
-                <!-- Nav -->
-                <div class="nav">
-                    <!-- Logo com um link para a página inicial -->
-                    <a href="index.html" class="nav-logo">
-                        <img src="img/amor2.png" alt="" class="logotipo">
-                    </a>
-                    <!-- Links de navegação -->
-                    <div class="nav-links">
-                        <a href="lolja.html" class="nav-link">Compre Nossos Produtos</a>
-                        <a href="fale-conosco.html" class="nav-link">Fale Conosco</a>
-                        <a href="trabalhe-conosco.html" class="nav-link">Trabalhe Conosco</a>
-                        <a href="sobre-a-aluna.html" class="nav-link">Sobre a Aluna</a>
-                        <a href="cliente.html" class="nav-link">Cliente</a>
-                    </div>
+            <!-- Nav -->
+            <div class="nav">
+                <!-- Logo com um link para a página inicial -->
+                <a href="index.html" class="nav-logo">
+                    <img src="img/amor2.png" alt="Logo da Loja" class="logotipo">
+                </a>
+                <!-- Links de navegação -->
+                <div class="nav-links">
+                    <!-- Adicionar links para outras páginas, como "Fale Conosco", "Trabalhe Conosco", etc. -->
+                   <a href="loja.html" class="nav-link">Loja</a>
+                    <a href="fale-conosco.html" class="nav-link">Fale Conosco</a>
+                    <a href="trabalhe-conosco.html" class="nav-link">Trabalhe Conosco</a>
+                    <a href="sobre-a-aluna.html" class="nav-link">Sobre a Aluna</a>
+                    <a href="cliente.html" class="nav-link">Cliente</a>
                 </div>
             </div>
         </div>
